# Lexer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: JS_CMP_LEXERConfig.cmake.in
include/: Body.hpp  Function.hpp  Include.hpp  Lexer.hpp  Program.hpp  Token.hpp
include/AST/: AST.hpp  Node.hpp  Parser.hpp
include/Optimization/: Optimizer.hpp
include/Tokenizer/: Lexer.hpp  Token.hpp
src/: Body.cpp  Function.cpp  Include.cpp  Lexer.cpp  Program.cpp  Token.cpp
src/AST/: AST_parser.cpp  AST_print.cpp  AST_transpile.cpp  Parser.cpp
src/Optimization/: Optimizer.cpp
src/Tokenizer/: Lexer.cpp  Token.cpp
tests/: auto_test_cases.cpp
tests/cases/basic/: HelloWorld.out  function.out  function_recursive.js  function_recursive.out  literals.js  literals.out
tests/cases/basic/array/: basic.js  basic.out  complex.js  complex.out  empty.js  empty.out  identifier.js  identifier.out  indexes.js  indexes.out
tests/cases/basic/comments/: block-comment-in-code.js  block-comment-in-code.out  multi-line.js  multi-line.out  nested.js  nested.out  single-line.js  single-line.out  special-character.js  special-character.out
tests/cases/basic/do_while/: basic.js  basic.out  nested.js  nested.out  with_break.js  with_break.out  with_continue.js  with_continue.out
tests/cases/basic/for/: basic.js  basic.out  for-in-complex.js  for-in-complex.out  for-in.js  for-in.out  nested.js  nested.out  scoped_var.js  scoped_var.out  with_break.js  with_break.out  with_continue.js  with_continue.out
tests/cases/basic/function/: basic.js  basic.out  function_recursive.js  function_recursive.out  function_with_multiline_params.js  function_with_multiline_params.out  function_with_special_character.js  function_with_special_character.out  one-line.js  one-line.out
tests/cases/basic/if/: basic.js  basic.out  comparison.js  comparison.out  else_if.js  else_if.out  empty_block.js  empty_block.out  if_else.js  if_else.out  logical.js  logical.out  multiple_conditions.js  multiple_conditions.out  nested.js  nested.out
tests/cases/basic/labeled/: label_single_statement.js  label_single_statement.out  label_while.js  label_while.out  label_with_block.js  label_with_block.out  nested_labels.js  nested_labels.out
tests/cases/basic/literals/: boolean.js  boolean.out  instanceof.js  instanceof.out  null.js  null.out  number.js  number.out  string.js  string.out  undefined.out
tests/cases/basic/new/: basic.js  basic.out  chained.js  chained.out  conditional.js  conditional.out  nested_new.js  nested_new.out  new_with_arguments.js  new_with_arguments.out  new_with_array.js  new_with_call.js  new_with_call.out  new_with_comma_operator.js  new_with_comma_operator.out  new_with_function_returning_function.js  new_with_function_returning_function.out  new_with_logical_expression.js  new_with_logical_expression.out  new_with_member.js  new_with_member.out  new_with_this.js  new_with_this.out
tests/cases/basic/object/: basic.js  basic.out  complex.js  complex.out  empty-scope.js  empty-scope.out  identifier.js  identifier.out  oneline.js  oneline.out
tests/cases/basic/operation/: arithmetic.js  arithmetic.out  assignment.js  assignment.out  bitwise.js  bitwise.out  comparison.js  comparison.out  logical.js  logical.out  ternary.js  ternary.out
tests/cases/basic/regex/: basic_regex.js  basic_regex.out  regex_in_expression.js  regex_in_expression.out  regex_multiple_flags.js  regex_multiple_flags.out  regex_with_escapes.js  regex_with_escapes.out  regex_with_flags.js  regex_with_flags.out
tests/cases/basic/switch/: basic_switch.js  default_first.js  empty_cases.js  expression_cases.js  fallthrough.js  multiple_statements.js  nested_switch.js  nested_switch.out  no_default.js
tests/cases/basic/try_catch/: basic.js  basic.out  multiple_catch.js  multiple_catch.out  nested.js  nested.out  rethrow.js  rethrow.out  throw.js  throw.out  with_finally.js  with_finally.out
tests/cases/basic/while/: basic.js  basic.out  nested.js  nested.out  with_break.js  with_break.out  with_continue.js  with_continue.out
tests/cases/basic/whitespace/: comment.js  comment.out  expression.js  expression.out  leading-trailling.js  leading-trailling.out  mixed.js  newline.js  newline.out  object.js  object.out  tabs.js  tabs.out
